--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
       tempore, dolorem sequi voluptate voluptates ex beatae ipsum, labore quam
       qui consectetur?
     </p>
+    <h2>Feature One</h2>
+    <ul>
+      <li>One</li>
+      <li>Two</li>
+      <li>Three</li>
+    </ul>
   </body>
 </html>
