adds blue color

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
       tempore, dolorem sequi voluptate voluptates ex beatae ipsum, labore quam
       qui consectetur?
     </p>
+    <h2>Feature Two</h2>
   </body>
 </html>
